2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Correct the ulink markup.

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Combine the What Is GNOME 
	text from ../index.wml and just link to the About GNOME
	page on the website. Remove the Getting Involved section 
	and just link to the Join GNOME page on the website.
	Add the list of translations here.
	This page can now be the main start/2.20 page itself.
	* docbook/Makefile_shared.am_fragment: 
	* docbook/C/rngettinginvolved.xml: Removed this xml file.
	
	* docbook/C/rnbase.xml: Removed unused file.

	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rni18n.xml:
	* docbook/C/rninstallation.xml:
	* docbook/C/rnlookingforward.xml:
	* docbook/C/rnusers.xml: Use the XML entity again for gnomeversion 
	and lastversion that was introduced after 2.12.

2006-08-30  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Updated Swedish translation.

2006-03-20  Raphael Higino  <raphaelh@cvs.gnome.org>

	* docbook/pt_BR/pt_BR.po: Updated Brazilian Portuguese translation
	and corrected typo in it.

2006-03-20  Jordi Mallach  <jordi@sindominio.net>

	* docbook/ca/ca.po: Updated Catalan translation by
	the GNOME Catalan team.

2006-03-19  Laurent Dhima  <laurenti@alblinux.net>

	* docbook/sq/sq.po: Updated Albanian translation.

2006-03-18  Bob Kashani  <bobk@ocf.berkeley.edu>

	* Makefile.am, docbook/gnome-doc-utils.make: update version to 2.14

2006-03-19  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Swedish translation updated.

2006-03-18  Jens Seidel <jseidel@cvs.gnome.org>

	* docbook/de/de.po: Proofread and update of German translation.

2006-03-16  Simos Xenitellis  <simos@gnome.org>

	* docbook/el/figures/*: Added Greek screenshots (created by pkst, 
	edited by myself).

2006-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* docbook/th/th.po: Updated Thai translation.
