@@ -6,20 +6,11 @@
 <!ENTITY lastversion "2.18">
 ]>
 
-<article id="index" lang="en" xmlns:xi="http://www.w3.org/2001/XInclude">
-	<articleinfo>
+<article lang="en" xmlns:xi="http://www.w3.org/2001/XInclude">
+	<sect1 id="index">
 		<title>GNOME &gnomeversion; Release Notes</title>
 
-		<copyright>
-			<year>2006</year>
-			<holder>GNOME Foundation</holder>
-		</copyright>
-
-		<publisher>
-			<publishername>GNOME Foundation</publishername>
-		</publisher>
-
-		<abstract>
+		<sect2>
 			<title>About GNOME</title>
 			
 			<para>
@@ -99,23 +90,24 @@
 				<ulink url="../cy/">Welsh</ulink>.
 			</para>
 
-		</abstract>
-	</articleinfo>
+		</sect2>
 
-	<!-- === includes go here === -->
-	<!-- What's New For Users -->
-	<xi:include href="rnusers.xml" />
-	<!-- What's New For Administrators -->
-	<xi:include href="rnadmins.xml" />
-	<!-- What's New for Developers -->
-	<xi:include href="rndevelopers.xml" />
-	<!-- Internationalization -->
-	<xi:include href="rni18n.xml" />
-	<!-- Installing GNOME -->
-	<xi:include href="rninstallation.xml" />
-	<!-- Known Issues -->
-	<!-- Looking to GNOME 2.16 and Beyond -->
-	<xi:include href="rnlookingforward.xml" />
+		<!-- === includes go here === -->
+		<!-- What's New For Users -->
+		<xi:include href="rnusers.xml" />
+		<!-- What's New For Administrators -->
+		<xi:include href="rnadmins.xml" />
+		<!-- What's New for Developers -->
+		<xi:include href="rndevelopers.xml" />
+		<!-- Internationalization -->
+		<xi:include href="rni18n.xml" />
+		<!-- Installing GNOME -->
+		<xi:include href="rninstallation.xml" />
+		<!-- Known Issues -->
+		<!-- Looking to GNOME 2.16 and Beyond -->
+		<xi:include href="rnlookingforward.xml" />
+
+	</sect1>
 
 	<appendix id="rncredits">
 	  <title>Credits</title>
