@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY urlfiguresbase "figures/">
 <!ENTITY gnomeversion "2.20">
 ]>
 
-<sect1 id="rnadmins">
+<sect2 id="rnadmins">
 	<title>What's New For Administrators</title>
 
 	<para>
@@ -16,7 +16,7 @@
 			where machine lockdown is required.
 	</para>
 
-	<sect2 id="rnadmins-pessulus">
+	<sect3 id="rnadmins-pessulus">
 		<title>Pessulus - Lockdown Editor</title>
 
 		<para>
@@ -60,9 +60,9 @@
 				The ability to edit the GNOME panels
 			</para></listitem>
 		</itemizedlist>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnadmins-sabayon">
+	<sect3 id="rnadmins-sabayon">
 		<title>Sabayon - Profile Editor</title>
 
 		<para>
@@ -98,7 +98,7 @@
 			location, allow for easy maintenance and deployment.
 		</para>
 
-	</sect2>
+	</sect3>
 
-</sect1>
+</sect2>
 <!-- vi:set tw=80 ts=2: -->
