@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY urlfiguresbase "figures/">
 <!ENTITY gnomeversion "2.20">
 ]>
 
-<sect1 id="rndevelopers">
+<sect2 id="rndevelopers">
 	<title>What's New For Developers</title>
 
 	<para>
@@ -21,7 +21,7 @@
 		not have this guarantee, but most remain consistent from release to release.
 	</para>
 
-	<sect2 id="rndevelopers-gslice">
+	<sect3 id="rndevelopers-gslice">
 		<title>GSlice</title>
 
 		<para>
@@ -71,9 +71,9 @@
 			not have to choose the most efficient allocator themselves.
 		</para>
 
-	</sect2>
+	</sect3>
 
-	<sect2 id="rndevelopers-services">
+	<sect3 id="rndevelopers-services">
 		<title>Service Registration</title>
 
 		<para>
@@ -102,7 +102,7 @@
 				<option>Exec</option> line.
 			</para></listitem>
 		</itemizedlist>
-	</sect2>
+	</sect3>
 
-</sect1>
+</sect2>
 <!-- vi:set tw=80 ts=2: -->
