@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
-<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY version "2.20">
 <!ENTITY urlfiguresbase "figures/">
 ]>
-<sect1 id="rni18">
+<sect2 id="rni18">
     <title>Internationalization</title>
 
     <!-- Translators: number of languages might change before final date -->
@@ -103,4 +103,4 @@
   <para>Many other languages are partially supported, with more than half of
   their strings translated.</para>
 
-</sect1>
+</sect2>
