@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY urlfiguresbase "figures/">
 <!ENTITY gnomeversion "2.20">
 ]>
 
-<sect1 id="rninstallation">
+<sect2 id="rninstallation">
 	<title>Installing GNOME</title>
 
 	<para>
@@ -175,5 +175,5 @@
 		looking to compile GNOME from source to consider using one of the build
 		tools listed above.
 	</para></note>
-</sect1>
+</sect2>
 <!-- vi:set tw=80 ts=2: -->
