@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY urlfiguresbase "figures/">
 <!ENTITY gnomeversion "2.20">
 ]>
 
-<sect1 id="rnusers">
+<sect2 id="rnusers">
 	<title>What's New For Users</title>
 	
 	<para>
@@ -16,7 +16,7 @@
 			more exciting user-oriented features in this release of GNOME.
 	</para>
 
-	<sect2 id="rnusers-performance">
+	<sect3 id="rnusers-performance">
 		<title>Performance Improvements</title>
 
 		<para>
@@ -74,9 +74,9 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>  
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-nautilus">
+	<sect3 id="rnusers-nautilus">
 		<title>Richer Searching</title>
 
 		<para>
@@ -112,9 +112,9 @@
 			If the Beagle search framework is available, Nautilus will take
 			advantage of it for faster, more contextual searching.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-yelp">
+	<sect3 id="rnusers-yelp">
 		<title>More Help</title>
 
 		<para>
@@ -146,9 +146,9 @@
 			available will be able to utilize it for even faster and more accurate
 			searching.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-ekiga">
+	<sect3 id="rnusers-ekiga">
 		<title>Ekiga</title>
 
 		<para>
@@ -190,9 +190,9 @@
 			with  a SIP address they can use on the Internet to make and receive calls
 			from anywhere.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-metacity">
+	<sect3 id="rnusers-metacity">
 		<title>Improved Window Management</title>
 
 		<para>
@@ -229,9 +229,9 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-deskbar">
+	<sect3 id="rnusers-deskbar">
 		<title>Deskbar</title>
 		<para>
 			New to GNOME is the Deskbar. Power users, keyboard enthusiasts and users
@@ -264,9 +264,9 @@
 			press Alt-F3 and enter some terms. You can also
 			browse or search your command history.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-gdm">
+	<sect3 id="rnusers-gdm">
 		<title>Login Improvements</title>
 		<para>
 			There have been many new improvements to the login system (GDM). The
@@ -301,9 +301,9 @@
 			information see the <ulink url="http://www.gnome.org/projects/gdm/">
 			GDM Project</ulink> page.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-fusa">
+	<sect3 id="rnusers-fusa">
 		<title>Fast User Switching</title>
 		<para>
 			GNOME &gnomeversion; includes support for fast user switching throughout the
@@ -343,9 +343,9 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-evolution">
+	<sect3 id="rnusers-evolution">
 		<title>Shared Calendaring</title>
 		<para>
 			A new feature in Evolution 2.6 is shared calendaring over CalDAV. The
@@ -369,9 +369,9 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-epiphany">
+	<sect3 id="rnusers-epiphany">
 		<title>Smarter Bookmarking</title>
 
 		<para>
@@ -408,9 +408,9 @@
 			its backend. If you're using <application>NetworkManager</application>,
 			Epiphany will be able to automatically detect your network settings.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-gedit">
+	<sect3 id="rnusers-gedit">
 		<title>Better Editor</title>
 
 		<para>
@@ -465,9 +465,9 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-imageviewer">
+	<sect3 id="rnusers-imageviewer">
 		<title>Image Viewer</title>
 
 		<para>
@@ -490,9 +490,9 @@
 					</phrase></textobject>
 				</mediaobject>
 			</figure>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-screensaver">
+	<sect3 id="rnusers-screensaver">
 		<title>Integrated Screensaver</title>
 		
 		<para>
@@ -528,9 +528,9 @@
 			Users who wish to continue using Xscreensaver will still be able to do
 			so and should consult their vendor's documentation on the specifics. 
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-gstreamer">
+	<sect3 id="rnusers-gstreamer">
 		<title>Latest GStreamer</title>
 		<para>
 			GNOME &gnomeversion; utilizes the technology of <application>GStreamer
@@ -559,9 +559,9 @@
 			<ulink url="http://www.fluendo.com/">Fluendo</ulink>, a long-time
 			supporter of GStreamer.
 		</para>
-	</sect2>
+	</sect3>
 
-	<sect2 id="rnusers-control-center">
+	<sect3 id="rnusers-control-center">
 		<title>Easy Configuration</title>
 		<para>
 			GNOME prides itself on being easy to configure and offering users simple
@@ -603,7 +603,7 @@
 				</phrase></textobject>
 			</mediaobject>
 		</figure>
-	</sect2>
+	</sect3>
 
-</sect1>
+</sect2>
 <!-- vi:set tw=80 ts=2: -->
