@@ -1,5 +1,17 @@
 2007-08-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/release-notes.xml:
+	* docbook/C/rnadmins.xml:
+	* docbook/C/rndevelopers.xml:
+	* docbook/C/rni18n.xml:
+	* docbook/C/rninstallation.xml:
+	* docbook/C/rnlookingforward.xml:
+	* docbook/C/rnusers.xml: Remove the abstract section, replacing 
+	it with a sect1, and use sect2 for all the other sections, so 
+	that everything is on one page. This is an experiment.
+
+2007-08-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/release-notes.xml: Correct the ulink markup.
 
 2007-08-14  Murray Cumming  <murrayc@murrayc.com>
